Improve swagger's documentation
