# internal/structure/Authentication.go
@@ -1,6 +1,10 @@
 package structure
 
 type LoginRequest struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
+	Username string `json:"username"  example:"username"`
+	Password string `json:"password"  example:"password"`
+}
+
+type LoginResponse struct {
+	Token string `json:"token"  example:"random_jwt_token"`
 }
